Hompage news and events

--- a/development/terminalfour/src/html/includes/homepage-at-a-glance.html
+++ b/development/terminalfour/src/html/includes/homepage-at-a-glance.html
@@ -5,7 +5,7 @@
         <p class="feature-text">Diverse. Transformative. Game-changing.</p>
         <div class="at-a-glance-items">
             <div class="at-a-glance-item">
-                <div class="at-a-glance-img">
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/city_denver.png" alt="1 out of 5 Colorado graduates choose MSU Denver"  />    
                 </div>
                 <div class="at-a-glance-text-wrap">
@@ -19,7 +19,7 @@
                 </div>    
             </div><!-- / .ata-glance-item (col) -->
             <div class="at-a-glance-item">
-                <div class="at-a-glance-img">
+                <div class="at-a-glance-img" data-mh="at-a-glance-img">
                     <img src="style-assets/media/degrees.png" alt="31.6% first-generation college students"  />    
                 </div>
                 <div class="at-a-glance-text-wrap">
@@ -33,7 +33,7 @@
                 </div>
             </div><!-- / .at-a-glance-item (col) -->
             <div class="at-a-glance-item">
-                <div class="at-a-glance-img"> 
+                <div class="at-a-glance-img" data-mh="at-a-glance-img"> 
                     <img src="style-assets/media/firstgen.png" alt="67 bachelor degree choices"  /> 
                 </div>
                 <div class="at-a-glance-text-wrap">
