--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -64,7 +64,7 @@
 
 @media (min-width: $screen-md-min) {
     .homepage-feature {
-        h1 { line-height: 48px;  }
+        h1 { line-height: 1.6;  }
     }
     .feature-heading {
         font-size: 40px;
