--- a/development/terminalfour/src/sass/msu-partials/_homepage-community.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-community.scss
@@ -7,7 +7,7 @@
 }
 @media (min-width: $screen-md-min) {
     #homepage-community {
-        padding: 50px percentage(1/$grid-columns);
-        padding: torem(50, $small-unit) percentage(1/$grid-columns);
+        padding: 50px percentage(1/$grid-columns) 30px;
+        padding: torem(50, $small-unit) percentage(1/$grid-columns) torem(30);
     }
 }
