--- a/www-root/includes/homepage-events.html
+++ b/www-root/includes/homepage-events.html
@@ -4,7 +4,7 @@
         <h1 class="feature-heading-large">What's happening right now at MSU Denver</h1>
         <div class="home-events-row">
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -15,7 +15,7 @@
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -26,7 +26,7 @@
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -37,7 +37,7 @@
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -48,7 +48,7 @@
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -59,7 +59,7 @@
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
             <!-- ** Event ** -->
-            <div class="home-event">
+            <div class="home-event" data-mh="home-event">
                 <div class="event-bg">
                     <img class="home-event-image" src="style-assets/media/event-image.jpg" alt="New Student Convocation show" />
                     <h2 class="home-event-title">New Student Convocation</h2>
@@ -69,6 +69,7 @@
                 </div><!-- / .event-bg -->
             </div><!-- // .home-event (col) -->
             <!-- ** // Event ** -->
+            
         </div><!-- // .home-events-row -->
         <a href="javascript:void(0)" class="btn homepage-btn">See all upcoming events</a>
     </div><!-- // .home-events (col) -->
