Homepage footer, RYOR, icons

--- a/development/terminalfour/src/html/includes/homepage-news.html
+++ b/development/terminalfour/src/html/includes/homepage-news.html
@@ -6,7 +6,7 @@
         <div class="news-features">
              <!-- featured featured news item -->
             <div class="news-feature news-feature__large" data-mh="home-news"> 
-                <div class="news-feature-bg">
+                <div class="news-feature-bg" data-mh="home-news">
                     <div class="news-feature-image">
                         <img class="img-responsive" src="style-assets/media/placeholder_3to2ratio.png" alt="Great news story headline" />    
                     </div>
