--- a/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
@@ -1,5 +1,6 @@
 /* Homepage-feature-caption partial */
 #homepage-feature-caption {
+    padding: 0;
     position: relative;
 }
 .homepage-feature-caption-img {
