--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -30,5 +30,6 @@ header {
 @import "msu-partials/homepage-at-a-glance";
 @import "msu-partials/homepage-community";
 @import "msu-partials/homepage-events";
+@import "msu-partials/footer";
 
 
