--- a/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-feature-caption.scss
@@ -2,6 +2,7 @@
 #homepage-feature-caption {
     padding: 0;
     position: relative;
+    text-align: right;
 }
 .homepage-feature-caption-img {
     @include img-responsive ;
