--- a/www-root/includes/footer.html
+++ b/www-root/includes/footer.html
@@ -36,6 +36,15 @@
           </div><!-- // .footer-promos-row (row) -->
           <hr class="footer-row-hr" /> 
           <div class="footer-menu-row">
+             <div class="footer-campus-info visible-xs">
+                    
+                    <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a></p>
+                    <p><a href="javascript:void(0)"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a></p>
+                    <p><a onclick="javascript:void(0)" href="javascript:void(0)"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
+                    
+                  
+              </div><!-- .campus-info  -->
               <div class="footer-links">
                   <div class="footer-links-row">
                       <div class="footer-links-col "> 
@@ -47,7 +56,7 @@
                             <li><a href="javascript:void(0)" id="Footer-Bookstore" target="_blank">Bookstore</a></li>
                         </ul>  
                       </div>
-                      <div class="footer-links-col">
+                      <div class="footer-links-col"> 
                         <ul class="footer-nav list-unstyled">
                             <li><a href="javascript:void(0)" id="Footer-Tours">Tours</a></li>
                             <li><a href="javascript:void(0)" id="Footer-Directions">Directions</a></li>
@@ -57,7 +66,7 @@
                         </ul>
                       </div>
                       <div class="social-mobile footer-links"> 
-                          <ul class="list-unstyled">
+                          <ul class="list-unstyled footer-social hidden-md hidden-lg">   
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
@@ -70,13 +79,13 @@
                   
               </div><!-- // .footer-links (col) -->
 
-              <div class="footer-campus-info">
+              <div class="footer-campus-info hidden-xs">
                     
                     <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
                     <p><a href="javascript:void(0)"><span class="fa fa-map-marker fa-lg"></span> Denver, Colorado</a></p>
                     <p><a href="javascript:void(0)"><span class="fa fa-phone fa-lg"></span> 303-556-5740</a></p>
                     <p><a onclick="javascript:void(0)" href="javascript:void(0)"><span class="fa fa-comments chat-icon fa-lg"></span> Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
-                    <ul class="list-unstyled desktop-social hidden-xs">
+                    <ul class="list-unstyled footer-social">
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
                             <li><a href="javascript:void(0)" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
@@ -89,7 +98,7 @@
 
               <div class="footer-logo">
                   <p><a href="javascript:void(0)"> <img src="style-assets/media/msudenver-informal_logo.png"></a></p>
-                  <p><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+                  <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
 
               </div><!-- .footer-logo -->
           </div><!-- .row -->
