--- a/www-root/includes/homepage-feature-caption.html
+++ b/www-root/includes/homepage-feature-caption.html
@@ -3,7 +3,7 @@
         <img class="homepage-feature-caption-img" src="style-assets/media/aes_building.jpg" alt="A photograph of the AES building" />    
         <div class="homepage-feature-caption-text">
             <h1 class="feature-heading">Our Aerospace and Engineering Sciences Building is almost ready for take off.</h1>
-            <a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub fa fa-angle-right">Read how we're powering careers and a 21st century economy</a>
+            <a href="javascript:void(0)" class="homepage-feature-caption-link feature-heading-sub ">Read how we're powering careers and a 21st century economy<i class="fa fa-angle-right"></i></a>
         </div>
     </div> 
 </section> 
