--- a/www-root/includes/homepage-ryor.html
+++ b/www-root/includes/homepage-ryor.html
@@ -2,10 +2,10 @@
  <section class="homepage-feature" id="homepage-ryor">
     <div class="ryor-image"> 
         <svg xmlns="http://www.w3.org/2000/svg" stroke="white" xmlns:xlink="http://www.w3.org/1999/xlink">    
-           <use xlink:href="/style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" />
+           <use xlink:href="style-assets/media/defs/svg/sprite.defs.svg#runyourownroad" />
         </svg>
     </div>
-    <div class="ryor-student" style="background: url(style-assets/media/RYOR_solano.jpg) no-repeat 100% 0">
+    <div class="ryor-student" style="background: url(style-assets/media/RYOR_solano.jpg) no-repeat 0 0">
             <h1 class="feature-heading">Cristian Solano-Cordova</h1>
             <h2 class="feature-heading-sub">MSU Denver ’17.</h2> 
             <p class="feature-text">White House Advisor. Dreamer. Roadrunner.</p>
