--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7445,6 +7445,9 @@ header {
 .homepage-feature svg {
   fill: currentColor;
 }
+.homepage-feature .fa {
+  padding-left: 10px;
+}
 
 .homepage-feature-block {
   position: relative;
@@ -7512,6 +7515,11 @@ header {
   color: #d11242;
 }
 
+@media (max-width: 991px) {
+  .homepage-btn .fa {
+    display: none;
+  }
+}
 @media (min-width: 992px) {
   .homepage-feature h1 {
     line-height: 1.6;
@@ -7556,6 +7564,7 @@ header {
 #homepage-feature-caption {
   padding: 0;
   position: relative;
+  text-align: right;
 }
 
 .homepage-feature-caption-img {
@@ -7633,6 +7642,7 @@ header {
   margin-top: 0.5rem;
   margin-bottom: 0.5em;
   margin-bottom: 0.5rem;
+  padding: 0;
   position: relative;
 }
 #homepage-ryor .feature-heading {
@@ -7691,9 +7701,14 @@ header {
 .ryor-student {
   padding-top: 32px;
   padding-top: 2rem;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .ryor-image {
+  background: url("../media/RYOR_bg.jpg") no-repeat;
   color: #fff;
   overflow: visible;
 }
@@ -7743,6 +7758,7 @@ header {
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
+    text-align: right;
   }
 }
 @media (min-width: 992px) and (min-width: 992px) {
@@ -7952,8 +7968,9 @@ header {
     padding: 0;
   }
   .news-feature__large .news-feature-heading {
-    font-size: 40px;
-    line-height: 1.1;
+    font-size: 48px;
+    font-size: 3rem;
+    line-height: 1.2;
     margin: 18px 0 16px;
     margin: 1.125rem 0 1rem;
   }
@@ -8083,15 +8100,6 @@ header {
   color: #000;
 }
 
-/*@media (max-width: $screen-xs-max) {
-    .at-a-glance-img, .at-a-glance-text-wrap {
-        position: relative;
-        top: 50%;
-        transform:         translateY(50%);
-        -webkit-transform: translateY(50%);
-        -moz-transform:    translateY(50%);
-    }    
-}*/
 @media (min-width: 531px) and (max-width: 767px) {
   .at-a-glance-img, .at-a-glance-text-wrap {
     padding: 0 15px;
@@ -8378,6 +8386,8 @@ footer {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .footer-links-row {
@@ -8431,6 +8441,26 @@ footer {
   display: none;
 }
 
+.privacy-statement {
+  font-size: 12.8px;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.footer-logo {
+  text-align: center;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 12.5%;
+}
+.footer-social li {
+  display: inline-flex;
+  float: left;
+}
+
 /** Footer media queries **/
 @media (min-width: 768px) {
   .footer-promo {
@@ -8475,15 +8505,7 @@ footer {
     width: 50%;
   }
 }
-@media (min-width: 768px) {
-  .footer-links-col li:last-child:after {
-    display: none;
-  }
 
-  .footer-nav {
-    padding: 0;
-  }
-}
 @media (min-width: 992px) {
   .footer-btn:hover, .footer-btn:focus, .footer-btn:active {
     color: #d11242;
@@ -8560,112 +8582,16 @@ footer {
   }
 }
 
-/*** MSU ***/
-.social i {
-  word-spacing: 5px;
-}
-
-.footer hr {
-  opacity: 0.25;
-}
-
-.footer-logo {
-  text-align: center;
-  transform: translate(0%, 10%);
-}
-
-.footer-menu {
-  line-height: 0.8;
-}
-
-.campus-info {
-  border: 0;
-  border-bottom: 1px solid white;
-  margin-bottom: 15px;
-}
-.campus-info span.fa.fa-map-marker.fa-lg {
-  margin-right: 9px;
-}
-.campus-info span.fa.fa-phone.fa-lg {
-  margin-right: 5px;
-}
-
-.footer .fa-2x {
-  font-size: 1.75em;
-}
-
-.footer .fa {
-  padding: 0px 5px;
-}
-
-div#lhnContainerDone {
-  display: none;
-}
-
-@media only screen and (max-width: 360px) {
-  .social i {
-    word-spacing: 1px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .footer-menu {
-    text-align: center;
+@media (min-width: 1200px) {
+  .footer-social {
+    padding: 0 12.5%;
   }
 
-  .social-non-mobile i {
+  .footer-nav {
+    padding: 0;
+  }
+  .footer-nav li:last-child:after {
     display: none;
-  }
-
-  .footer-logo {
-    margin-bottom: 20px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .hide-hr {
-    display: none;
-  }
-
-  .mobile-msuinfo-show {
-    display: none;
-  }
-
-  .social-mobile i {
-    display: none;
-  }
-
-  .campus-info {
-    padding-top: 25px;
-  }
-
-  .footer-logo {
-    transform: translate(0%, 1%);
-  }
-}
-@media only screen and (max-width: 1199px) {
-  .campus-info {
-    border: 0;
-    border-bottom: none;
-    margin-bottom: 15px;
-  }
-
-  .social-mobile i {
-    text-align: center;
-  }
-
-  .footer-logo {
-    padding-top: 10px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .campus-info {
-    border: 0;
-    border-right: 0px solid white;
-    border-bottom: 0;
-    margin-bottom: 0;
-  }
-
-  .campus-info {
-    padding-top: 0px;
   }
 }
 
