--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -150,3 +150,61 @@
     <!-- end mobile search-input -->
   <!-- ****** END PUSHDOWN MENU AND SEARCH BAR ****** -->
 </header>
+
+
+
+<!--CDN-->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>  
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript">
+// make search button appear when text entered in search field
+$('#q').keyup(function () {
+    if ($.trim($('#q').val()).length) {
+        $('#searchGoLink').removeClass('disableGoButton');
+    }
+    else {
+        $('#searchGoLink').addClass('disableGoButton');
+    }
+});
+
+// make mobile search field 100% opaque when receives focus
+$('.search-text-mobile').focusin(function () {
+        $('.search-text-mobile').css('opacity', '1.0');
+});
+$('.search-text-mobile').focusout(function () {
+        $('.search-text-mobile').css('opacity', '0.8');
+});
+
+// when desktop search icon clicked: open/close nav bar, change mobile search glyph and hamburger background colors
+$('.glyphicon-search-mobile').click(function(){
+   $('.search-input-mobile').slideToggle();
+   $('#content-nav').removeClass('in');
+   $('.fa-bars').css('background-color', 'transparent');
+   $('.glyphicon-search-mobile').css('background-color', '#005fae');
+});
+
+// when hamburger clicked, hide search bar and change hamburger/search glyph background colors ***NEEDS FIXING SINCE ORIGINAL MOBILE DESIGN WAS MODIFIED***
+$('.navbar-toggle').click(function(){
+   $('.search-input-mobile').hide();
+   $('.fa-bars').css('background-color', '#005fae');
+   $('.glyphicon-search-mobile').css('background-color', 'transparent');
+});
+
+// when menu item clicked, open/close pushdown menu
+$('.mobile-header').click(function(){
+   $('.pushdown-menu').slideToggle();
+});
+
+// open/close content-nav bar when search/close glyphs clicked
+$('.search-desktop').click(function(){
+   $('#content-nav').css('max-height', '55px');
+});
+$('.glyphicon-remove').click(function(){
+   $('#content-nav').css('max-height', '');
+});
+</script>
