--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -158,7 +158,6 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>  
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript">
@@ -206,5 +205,33 @@ $('.search-desktop').click(function(){
 });
 $('.glyphicon-remove').click(function(){
    $('#content-nav').css('max-height', '');
+});
+</script>
+
+<script type="text/javascript">
+
+console.log('Script loaded - 9232015.3');
+function hideAllSubNav(){
+	$('#cause, #health, #stories, #research, #involved, #content-sub-nav, #content-sub-lower-wrapper, #content-sub-nav-lower-health, #content-sub-nav-lower-cause, #content-sub-nav-lower-stories, #content-sub-nav-lower-research, #content-sub-nav-lower-involved').hide();
+	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').parent().removeClass('active-nav');
+	$('#hero').css('margin-top','0');
+}
+
+hideAllSubNav();
+
+/* Search Click Event */
+$('#nav-search').click(function(){
+	hideAllSubNav();
+	$('#content-sub-nav').hide();
+	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('fast', 0);
+	setTimeout(function(){
+		$('#search-input').fadeTo('fast', 1);
+		$('#search-text').focus();
+	}, 100);
+});
+
+$('#nav-search-close').click(function(){
+	$('#search-input').hide();
+	$('#nav-cause, #nav-health, #nav-stories, #nav-research, #nav-involved, #nav-admissions, #nav-academics, #nav-campus, #nav-athletics, #nav-hub, #nav-alumni, #nav-faculty, #nav-search').fadeTo('slow', 1);
 });
 </script>
