--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -247,7 +247,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
 #content-nav #search-input input[type=text] {
   display: inline-block;
-  height: 55px;
+  height: 50px;
   width: 32em;
   /* was 900px */
   border: none;
@@ -614,6 +614,11 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   margin-bottom: 0.2em;
 }
 
+.container .pushdown-menu {
+  padding-left: 0em !important;
+  border-right: 1px solid #4cb4f2;
+}
+
 @media screen and (max-width: 450px) {
   .navbar-toggle{
    padding: 9px 5px;
@@ -897,13 +902,13 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
   .left-addon .glyphicon {
     font-size: 23px;
-    top: 0.4em;
+    top: -0.2em;
   }
 
   #content-nav #nav-search-close {
     font-size: 20px;
-    top: -4em;
-    left: 54.5em;
+    top: -4.2em;
+    left: 25em;
   }
 
   .glyphicon-search {
@@ -913,11 +918,14 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
     padding-top: 0.9em;
   }
 
+  .search-desktop {
+    top: 0.3em !important;
+  }
   #content-nav #search-input .button {
-    top: -3.2em;
+    top: -2.8em;
     height: 30px;
     width: 130px;
-    left: 68em;
+    left: 28em;
   }
 
   .button {
