reverse order of visit/give/apply buttons

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -383,7 +383,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   letter-spacing: 2px;
-  float: right;
+  float: right !important;
   margin-left: 0.1em;
   // display: none;
 }
